--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             `;
         
             try {
-                const response = await fetch('data/penguin_prediction.json');  // Updated path
+                const response = await fetch('https://linklinucare.github.io/BDS2025_M4_E1/data/penguin_prediction.json');
                 const data = await response.json();
         
                 predictionBox.innerHTML = `
